test/error/OpIndexInt.ci
public static class Test
{
	public static bool Run()
	{
		int i = 1["foo"]; //ERROR: Cannot index this object
		return true;
	}
}
